<resources>
    <string name="app_name">ExcursApp</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="NDW_crearActividad">Crear Actividad</string>
    <string name="NDW_filtro">Consulta de Actividades</string>
    <string name="NDW_grupo">Por grupo</string>
    <string name="NDW_fecha">Por Fecha</string>
    <string name="NDW_ayuda">Ayuda</string>

    <string name="crear"><b>Crear Actividad</b></string>
    <string name="campos">Campos Obligatorios(*)</string>
    <string name="insertar">Insertar Imagen</string>
    <string name="titAct">Titulo de la Actividad *</string>

    <string name="dir">Dirección</string>
    <string name="fecha">Fecha y Hora</string>
    <string name="grupos">Grupo/s</string>
    <string name="Lugar">Lugar de Realización</string>
    <string name="prof">Profesores</string>
    <string name="titulo">TITULO</string>
    <string name="todo">TODO</string>
    <string name="app_name_view">Actividad</string>

    <string name="dash">Borrar</string>
    <string name="editar">Editar</string>
    <string name="pdf">Imprimir en PDF</string>

    <string name="comocrear">Cómo crear una actividad</string>
    <string name="help_create1">1. En la parte superior izquierda, haz clic en</string>
    <string name="help_create11">Menú </string>
    <string name="help_create2">2. Selecciona la opción </string>
    <string name="help_create3">3. Inserta una imagen, edita todos los campos de la actividad y haz clic en Aceptar.</string>
    <string name="help_create4">4. Aparecerá un mensaje temporal avisándote de que tu actividad ha sido creada correctamente.</string>
    <string name="help_create5">5. En la lista de actividades de la página principal de esta App, aparecerá tu actividad creada
        ordenada por fecha de realización (no de creación de la actividad).</string>

    <string name="comofiltrar">Cómo consultar actividades</string>
    <string name="help_search1">1. En la parte superior izquierda, haz clic en Menú ... .</string>
    <string name="help_search2">2. Si quieres filtrar tu consulta por grupo/os escolares, selecciona la opción ---------------- o si quieres filtrar
        tu consulta por fecha/fechas almacenadas, selecciona la opción       </string>
    <string name="help_search3">3. Selecciona uno o varios campos a consultar.</string>
    <string name="help_search4">4. Aparecerá la lista de actividades filtradas según los campos seleccionados anteriormente.</string>

    <string name="comoimprimir">Cómo imprimir en formato PDF</string>
    <string name="help_print1">1. Desde la pantalla principal, haz clic sobre la actividad a imprimir.</string>
    <string name="help_print2">2. En la parte superior derecha, haz clic en el desplegable</string>
    <string name="help_print3">3. Selecciona la opción</string>
    <string name="help_print4">4. Obtendrás en formato PDF la actividad seleccionada.</string>

    <string name="comoeditar">Cómo modificar una actividad</string>
    <string name="help_edit1">1. Desde la pantalla principal, haz clic sobre la actividad a editar.</string>
    <string name="help_edit4">4. Modifica la imagen y/o los campos de la actividad y haz clic en Guardar.</string>
    <string name="help_edit5">5. Aparecerá un mensaje temporal avisándote de que tu actividad ha sido modificada correctamente.</string>
    <string name="help_edit6">6. En la lista de actividades de la página principal de esta App, aparecerá tu actividad modificada
        ordenada por fecha de realización (no de modificación de la actividad).</string>

    <string name="comoborrar">Cómo borrar una actividad</string>
    <string name="help_delete1">1. Desde la pantalla principal, haz clic sobre la actividad a borrar.</string>
    <string name="help_delete4">4. Haz clic en Aceptar para confirmar el borrado de la actividad.</string>
    <string name="help_delete5">5. Aparecerá un mensaje temporal avisándote de que tu actividad ha sido borrada correctamente y de forma permanente.</string>

    <string name="guardar">Guardar Actividad</string>

    <string-array name="profesor">
        <item>Martinez Pepe</item>
        <item>López, Juanma</item>
        <item>Pérez, Antonio</item>
        <item>Ruíz, Rosa</item>
        <item>Rodríguez, Miguel</item>
        <item>Moreno, Pedro</item>
        <item>Flores, Amparo</item>
        <item>Fernández, Aurora</item>
        <item>González, María</item>
        <item>Muñoz, Gerónimo</item>
        <item>López, Javier</item>
        <item>Martín, Felipe</item>
    </string-array>
    <string-array name="grupos">
        <item>1º ESO A</item>
        <item>1º ESO B</item>
        <item>2º ESO A</item>
        <item>2º ESO B</item>
        <item>3º ESO A</item>
        <item>3º ESO B</item>
        <item>4º ESO A</item>
        <item>4º ESO B</item>
        <item>2º DAM</item>
    </string-array>
</resources>
