<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verActividad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    tools:context=".vista.VerActividad">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/sinfoto" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagen"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/campoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titulo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Descripcion"
            android:textSize="16sp"
            android:textAlignment="center"
            />

        <View
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoDescripcion"
            android:background="#ffffff"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="219dp" />

        <TextView
            android:id="@+id/profesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/separador"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/prof"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/campoProfesor"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profesor"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"/>

        <View
            android:id="@+id/separador2"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoProfesor"
            android:layout_marginTop="12dp"
            android:background="#ffffff"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="219dp" />

        <TextView
            android:id="@+id/lugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/separador4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/Lugar"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/campoLugar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lugar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

        <View
            android:id="@+id/separador3"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoLugar"
            android:background="#ffffff"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="219dp" />

        <TextView
            android:id="@+id/Grupos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/separador2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/grupos"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/campoGrupo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Grupos"
            android:layout_marginTop="11dp"
            android:textSize="16sp"/>

        <View
            android:id="@+id/separador4"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoGrupo"
            android:background="#ffffff"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="219dp" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoDireccion"
            android:layout_marginLeft="10dp"
            android:text="@string/fecha"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <View
            android:id="@+id/separador5"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_above="@+id/fecha"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="#ffffff"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="219dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoLugar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dir"
            android:textColor="@color/azulOscuro"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/campoDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/campoHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoFecha"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/campoFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/fecha"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fecha"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="TextView"
            android:textSize="16sp"/>

</RelativeLayout>
